src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Current_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Current Facility)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Hourly_Rate__c</fullName>
        <label>Current Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Malpractice_Claims__c</fullName>
        <label>Current Malpractice Claims</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Position__c</fullName>
        <label>Current Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Volume__c</fullName>
        <label>Current Volume</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 10,000</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10,000 - 20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,000 - 35,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35,000 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DEA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEL_Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(MobilePhone)=0, &quot;Mobile, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Primary_Specialty__c ,&quot;&quot;), &quot; Primary_Specialty__c , &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(MailingStreet)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation ,&quot;&quot;), &quot; Salutation , &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Provider_Primary_Region__c ,&quot;&quot;), &quot; Provider_Primary_Region__c , &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Professional_Title__c ,&quot;&quot;), &quot; Professional_Title__c , &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEL_Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEL_Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(ISPICKVAL ( Salutation,&quot;&quot;), 0, 10) + IF(ISPICKVAL ( Provider_Primary_Region__c,&quot;&quot;), 0, 10) + IF(LEN( PrimaryRecruiter__c) = 0, 0, 15) + IF(LEN( MobilePhone ) = 0, 0,15) + IF( ISPICKVAL( Primary_Specialty__c ,&quot;&quot;), 0,10) + IF( ISPICKVAL( Professional_Title__c,&quot;&quot;), 0, 10) + IF( CONTAINS ( MailingStreet ,&quot;&quot;), 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEL_Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dart_Responder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use for Tracking DART (Disaster Assistance Response Team) physicians.</description>
        <label>Dart Responder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(MobilePhone)=0, &quot;Mobile, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Primary_Specialty__c ,&quot;&quot;), &quot;Primary Specialty, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(MailingStreet)=0, &quot;Mailing Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email,&quot;,&quot;&quot;))&amp;&quot;&quot;&amp;IF( ISPICKVAL( Provider_Primary_Region__c ,&quot;&quot;), &quot; Provider Primary Region, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Professional_Title__c ,&quot;&quot;), &quot; Professional Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( PrimaryRecruiter__c )=0, &quot;Primary Recruiter,&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(ISPICKVAL ( Provider_Primary_Region__c,&quot;&quot;), 0, 10) + IF(LEN( PrimaryRecruiter__c) = 0, 0, 10) + IF(LEN( MobilePhone ) = 0, 0,10) + IF( ISPICKVAL(  Primary_Specialty__c ,&quot;&quot;), 0,10) + IF( ISPICKVAL( Professional_Title__c,&quot;&quot;), 0, 10) + IF( LEN( MailingStreet ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_from_Lead__c</fullName>
        <label>Date of Birth from Lead</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Birth__c</fullName>
        <label>Day of Birth</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Denial_Comments__c</fullName>
        <label>Denial Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department2__c</fullName>
        <description>Department field that is used on the Case record</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRC - Central Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRC - East Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRC - West Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Medicine Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Enterprise Resource Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Healthcare Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Network/Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Network Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Billing - Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Difference_in_Active_PFA_s_of_EL_s__c</fullName>
        <formula>Difference_in_Total_Inactive_PFA_s__c  - No_of_EL_Credentialed_Only_PFA_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Active PFA&apos;s &amp; # of EL&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_in_Total_Inactive_PFA_s__c</fullName>
        <formula>No_of_PFA_s__c - of_Inactive_PFA_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Total # &amp; Inactive PFA&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_in_of_PFA_s_and_Prospects__c</fullName>
        <formula>No_of_PFA_s__c - No_of_Candidate_Prospect_PFA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in # of PFA&apos;s and Prospects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diploma__c</fullName>
        <description>Used by Credentialing.
From file DocTracking, TSG fields= RN, NPDiploma, PADiploma</description>
        <label>Diploma(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Portal_User_Automaticall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Portal User Automaticall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocsComments__c</fullName>
        <description>Problems from TSG DB;
From file DocTracking, TSG field = AnyOtherActionDesc</description>
        <label>Docs on File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoctorID__c</fullName>
        <description>Use for historical look-up only. Converted to autonumber 10/01/06 starting at 00123150</description>
        <displayFormat>{00000000}</displayFormat>
        <label>DoctorID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Driver_Licence_Number__c</fullName>
        <label>Drivers License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_State__c</fullName>
        <label>Drivers License State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Valid_Throgh__c</fullName>
        <description>document on file</description>
        <label>Drivers License Valid Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From file DocTracking, TSG field = DriverLic</description>
        <label>Drivers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECFMG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Credentialing.
From file DocTracking, TSG field = ECFMG</description>
        <label>ECFMG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMR_Experience__c</fullName>
        <label>EMR Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic: Allscripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Cerner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: CMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Emergisoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Empower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: EPIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Logicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: McKesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Medhost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Meditech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Picis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Poseidon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Promed Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: T-system EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Versus Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: Wellsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic: X-press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper: Empower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper: Promed Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper: T-system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Edit_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_File_Checked_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Edit File Checked by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Edit File Checked by)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_Comments__c</fullName>
        <label>Education Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Auditor__c</fullName>
        <label>Eligible Auditor</label>
        <picklist>
            <picklistValues>
                <fullName>Audits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Coder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible Coder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone_1__c</fullName>
        <label>Emergency Contact Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone_2__c</fullName>
        <label>Emergency Contact Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone_Number__c</fullName>
        <description>TSG Doctors: EmerPhone</description>
        <label>Emergency Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>Emergency Contact Name to call in the event of an emergency. TSG DB Doctors (EmerDEsc)</description>
        <label>Emergency Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Graduation_Date__c</fullName>
        <label>Estimated Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evacuation_Location__c</fullName>
        <label>Evacuation Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evacuation_Plan_for_Category_1__c</fullName>
        <label>Evacuation Plan for Category 1</label>
        <picklist>
            <picklistValues>
                <fullName>Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evacuate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evacuation_Plan_for_Category_2__c</fullName>
        <label>Evacuation Plan for Category 2</label>
        <picklist>
            <picklistValues>
                <fullName>Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evacuate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evacuation_Plan_for_Category_3__c</fullName>
        <label>Evacuation Plan for Category 3</label>
        <picklist>
            <picklistValues>
                <fullName>Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evacuate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_Board_Certified__c</fullName>
        <label>Ever Board Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_Comments__c</fullName>
        <description>EMExperience- From TSG</description>
        <label>Experience Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>This is the Extension to the Phone</description>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Username__c</fullName>
        <label>Facebook Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Reference__c</fullName>
        <description>Carried over from the lead.  i.e.  Company for TSG leads needs to be set to &quot;TSG Resource Pool&quot; however a current facility may be provided in the lead data. Capture it (the hospital, facility, or company data) in this field.</description>
        <label>Facility Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fellow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to be Fellowshop</description>
        <label>Fellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Phone__c</fullName>
        <description>This formula field looks for phone #s in the contact via a list of possible phones and selects the first from a call order of work, mobile, home, Answering Service, Beeper.  If it does not find any phone it displays the words &quot; No Phone &quot;.</description>
        <formula>If (Work_Phone__c &lt;&gt;  null,  
Work_Phone__c,
if (Work_Phone_2__c &lt;&gt; null,
Work_Phone_2__c,
if (Work_Phone_3__c &lt;&gt; null,
Work_Phone_3__c,
if (MobilePhone &lt;&gt; null,
MobilePhone,
if (HomePhone &lt;&gt; null,
HomePhone, 
if (Answering_Service_Phone__c  &lt;&gt; null,
Answering_Service_Phone__c ,  
if (Beeper_Number__c  &lt;&gt; null,
Beeper_Number__c ,   &quot;No Phone&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Phone Found</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Previous_City__c</fullName>
        <label>1st Previous City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Previous_State__c</fullName>
        <label>1st Previous State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Previous_Street_Address__c</fullName>
        <label>1st Previous Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Previous_Zip_Code__c</fullName>
        <label>1st Previous Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flowcast_ID__c</fullName>
        <label>Flowcast ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Manager_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GP Manager&apos;s Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Manager&apos;s Name)</relationshipLabel>
        <relationshipName>Contacts_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GP_Manager_s_Phone_Number__c</fullName>
        <label>GP Manager&apos;s Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GlobalProviderID__c</fullName>
        <description>The TSG Global Provider ID hosted in SFDC to provider tracking between all systems at TSG.  This is a Autonumber Field</description>
        <displayFormat>{0}</displayFormat>
        <label>GlobalProviderID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Globalization_Partner__c</fullName>
        <formula>IF( RecordTypeId =&quot;012T0000000Cxmc&quot;, &quot;Globalization Partner&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Globalization Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Globalization_Request_Approved_Denied__c</fullName>
        <label>Globalization Request Approved/Denied</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Ad_Group__c</fullName>
        <label>Google Ad Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>